--- a/Exercices/module1/exo1.4/index.html
+++ b/Exercices/module1/exo1.4/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <link rel="stylesheet" href="./style.css">
 
 <body>
+  <h1></h1>
   <div
     class="red"
-    style="display: inline-block; min-width: 50px; min-height: 50px; border:1px solid black"
+    style="display: inline-block; min-width: 50px; min-height: 50px; border:1px solid black;"
   ></div> <br>
   <div
   class="orange"
